--- a/Updated Version/View/ForgotPassword.fxml
+++ b/Updated Version/View/ForgotPassword.fxml
@@ -13,14 +13,9 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="408.0" prefWidth="570.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ForgotPassword">
    <children>
-      <ImageView fitHeight="379.0" fitWidth="596.0" layoutX="4.0" layoutY="-4.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="579.0" fitWidth="576.0" layoutX="-6.0" layoutY="-163.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../image/gradient.jpg" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="379.0" fitWidth="596.0" layoutX="4.0" layoutY="32.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../image/gradient.jpg" />
+            <Image url="@../image/bg1.gif" />
          </image>
       </ImageView>
       <ImageView fitHeight="193.0" fitWidth="177.0" layoutX="14.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
@@ -42,25 +37,25 @@
       <Circle fill="#f8c8dc" layoutX="126.0" layoutY="342.0" opacity="0.4" radius="20.0" stroke="#e37383" strokeType="INSIDE" />
       <Circle fill="#f8c8dc" layoutX="32.0" layoutY="388.0" opacity="0.4" radius="20.0" stroke="#e37383" strokeType="INSIDE" />
       <Circle fill="#f8c8dc" layoutX="90.0" layoutY="362.0" opacity="0.4" radius="26.0" stroke="#e37383" strokeType="INSIDE" />
-      <Label layoutX="102.0" layoutY="276.0" prefHeight="30.0" prefWidth="76.0" text="Enter:" textFill="#ab3363">
+      <Label layoutX="67.0" layoutY="296.0" prefHeight="52.0" prefWidth="64.0" text="Enter:" textFill="#ab3363">
          <font>
-            <Font name="Arial Rounded MT Bold" size="23.0" />
+            <Font name="Baskerville Old Face" size="23.0" />
          </font>
       </Label>
-      <TextField fx:id="mytextfield" layoutX="176.0" layoutY="279.0" prefHeight="26.0" prefWidth="317.0" promptText="Enter your 4-digit code here..." />
-      <Button fx:id="mybutton" layoutX="256.0" layoutY="314.0" mnemonicParsing="false" onAction="#enter" text="Enter" textFill="#ab3363">
+      <TextField fx:id="mytextfield" layoutX="127.0" layoutY="309.0" prefHeight="26.0" prefWidth="317.0" promptText="Enter your 4-digit code here..." />
+      <Button fx:id="mybutton" layoutX="449.0" layoutY="303.0" mnemonicParsing="false" onAction="#enter" text="Enter" textFill="#ab3363">
          <font>
             <Font size="18.0" />
          </font>
       </Button>
-      <Label fx:id="mywarninglabel" layoutX="180.0" layoutY="358.0" text="Code does not match!" textFill="RED" visible="false">
+      <Label fx:id="mywarninglabel" layoutX="194.0" layoutY="354.0" text="Code does not match!" textFill="RED" visible="false">
          <font>
-            <Font name="OCR A Extended" size="18.0" />
+            <Font name="OCR A Extended" size="15.0" />
          </font>
       </Label>
-      <Label layoutX="183.0" layoutY="127.0" prefHeight="64.0" prefWidth="228.0" text="&quot;We sent a 4 digit code" textFill="#ab3363">
+      <Label layoutX="195.0" layoutY="121.0" prefHeight="64.0" prefWidth="228.0" text="&quot;We sent a 4 digit code" textFill="#ab3363">
          <font>
-            <Font name="Arial Rounded MT Bold" size="20.0" />
+            <Font name="Baskerville Old Face" size="25.0" />
          </font>
       </Label>
       <Label layoutX="187.0" layoutY="44.0" text="Forgot" textFill="#6b0829">
@@ -69,18 +64,18 @@
          </font>
       </Label>
       <Circle fill="#f8c8dc" layoutX="535.0" layoutY="374.0" opacity="0.4" radius="32.0" stroke="#e37383" strokeType="INSIDE" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="LIGHTPINK" height="414.0" layoutY="-6.0" stroke="LIGHTPINK" strokeType="INSIDE" width="16.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="LIGHTPINK" height="16.0" layoutX="-6.0" layoutY="398.0" stroke="LIGHTPINK" strokeType="INSIDE" width="576.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="LIGHTPINK" height="414.0" layoutX="554.0" layoutY="-4.0" stroke="LIGHTPINK" strokeType="INSIDE" width="16.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="LIGHTPINK" height="16.0" layoutX="-3.0" stroke="LIGHTPINK" strokeType="INSIDE" width="570.0" />
-      <Line endX="428.615234375" layoutX="123.0" layoutY="398.0" startX="-105.84927368164062" />
-      <Line endX="428.615234375" layoutX="123.0" layoutY="17.0" startX="-105.84927368164062" />
-      <Line endX="2.0" endY="284.29290771484375" layoutX="552.0" layoutY="112.0" startX="2.0" startY="-93.46446228027344" />
-      <Line endX="2.0" endY="284.29290771484375" layoutX="14.0" layoutY="113.0" startX="2.0" startY="-93.46446228027344" />
-      <Line endX="-175.34927368164062" endY="-14.5" layoutX="192.0" layoutY="32.0" startX="-201.84925842285156" startY="-37.70709228515625" stroke="#7c5454" strokeWidth="5.0" />
-      <Line endX="129.0" endY="-38.0" layoutX="441.0" layoutY="38.0" startX="112.5" startY="-19.9644775390625" stroke="#7c5454" strokeWidth="5.0" />
-      <Line endX="-47.0" endY="44.0" layoutX="63.0" layoutY="354.0" startX="-71.313720703125" startY="66.17156982421875" stroke="#7c5454" strokeWidth="5.0" />
-      <Line endX="-32.8492431640625" endY="35.29290771484375" layoutX="603.0" layoutY="380.0" startX="-50.0" startY="17.0" stroke="#7c5454" strokeWidth="5.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="LIGHTPINK" height="414.0" layoutY="-6.0" stroke="LIGHTPINK" strokeType="INSIDE" style="-fx-fill: transparent;" width="16.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="LIGHTPINK" height="16.0" layoutX="-6.0" layoutY="398.0" stroke="LIGHTPINK" strokeType="INSIDE" style="-fx-fill: transparent;" width="576.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="LIGHTPINK" height="414.0" layoutX="554.0" layoutY="-4.0" stroke="LIGHTPINK" strokeType="INSIDE" style="-fx-fill: transparent;" width="16.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="LIGHTPINK" height="16.0" layoutX="-3.0" stroke="LIGHTPINK" strokeType="INSIDE" style="-fx-fill: transparent;" width="570.0" />
+      <Line endX="428.615234375" layoutX="123.0" layoutY="398.0" startX="-105.84927368164062" stroke="#ff82f3" strokeWidth="6.0" />
+      <Line endX="428.615234375" layoutX="123.0" layoutY="14.0" startX="-105.84927368164062" stroke="#ff82f3" strokeWidth="6.0" />
+      <Line endX="2.0" endY="284.29290771484375" layoutX="552.0" layoutY="112.0" startX="2.0" startY="-93.46446228027344" stroke="#ff82f3" strokeWidth="6.0" />
+      <Line endX="2.0" endY="284.29290771484375" layoutX="14.0" layoutY="113.0" startX="2.0" startY="-93.46446228027344" stroke="#ff82f3" strokeWidth="6.0" />
+      <Line endX="-175.34927368164062" endY="-14.5" layoutX="192.0" layoutY="32.0" startX="-201.84925842285156" startY="-37.70709228515625" stroke="#ff82f3" strokeWidth="5.0" />
+      <Line endX="129.0" endY="-38.0" layoutX="441.0" layoutY="38.0" startX="112.5" startY="-19.9644775390625" stroke="#ff82f3" strokeWidth="5.0" />
+      <Line endX="-47.0" endY="44.0" layoutX="63.0" layoutY="354.0" startX="-71.313720703125" startY="66.17156982421875" stroke="#ff82f3" strokeWidth="5.0" />
+      <Line endX="-32.8492431640625" endY="35.29290771484375" layoutX="603.0" layoutY="380.0" startX="-50.0" startY="17.0" stroke="#ff82f3" strokeWidth="5.0" />
       <Circle fill="#f8c8dc" layoutX="473.0" layoutY="368.0" opacity="0.4" radius="15.0" stroke="#e37383" strokeType="INSIDE" />
       <Circle fill="#f8c8dc" layoutX="46.0" layoutY="73.0" opacity="0.4" radius="20.0" stroke="#e37383" strokeType="INSIDE" />
       <Circle fill="#f8c8dc" layoutX="155.0" layoutY="49.0" opacity="0.4" radius="32.0" stroke="#e37383" strokeType="INSIDE" />
@@ -89,24 +84,24 @@
       <Circle fill="#f8c8dc" layoutX="467.0" layoutY="93.0" opacity="0.4" radius="32.0" stroke="#e37383" strokeType="INSIDE" />
       <Circle fill="#f8c8dc" layoutX="487.0" layoutY="148.0" opacity="0.4" radius="20.0" stroke="#e37383" strokeType="INSIDE" />
       <Circle fill="#f8c8dc" layoutX="505.0" layoutY="172.0" opacity="0.4" radius="23.0" stroke="#e37383" strokeType="INSIDE" />
-      <ImageView fitHeight="95.0" fitWidth="95.0" layoutX="377.0" layoutY="197.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="127.0" fitWidth="160.0" layoutX="313.0" layoutY="200.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../image/anya1.png" />
          </image>
       </ImageView>
-      <Label layoutX="146.0" layoutY="158.0" prefHeight="64.0" prefWidth="211.0" text="to your number:" textFill="#ab3363">
+      <Label layoutX="127.0" layoutY="162.0" prefHeight="64.0" prefWidth="211.0" text="to your number:" textFill="#ab3363">
          <font>
-            <Font name="Arial Rounded MT Bold" size="20.0" />
+            <Font name="Baskerville Old Face" size="25.0" />
          </font>
       </Label>
-      <Label layoutX="66.0" layoutY="190.0" prefHeight="64.0" prefWidth="462.0" text="Please enter the 4 digit code before it expires." textFill="#ab3363">
+      <Label layoutX="66.0" layoutY="204.0" prefHeight="64.0" prefWidth="462.0" text="Please enter the 4 digit code before it expires." textFill="#ab3363">
          <font>
-            <Font name="Arial Rounded MT Bold" size="20.0" />
+            <Font name="Baskerville Old Face" size="25.0" />
          </font>
       </Label>
-      <Label layoutX="307.0" layoutY="158.0" prefHeight="64.0" prefWidth="140.0" text="+639510**** &quot;" textFill="#ab3363" underline="true">
+      <Label layoutX="297.0" layoutY="160.0" prefHeight="71.0" prefWidth="160.0" text="+639510**** &quot;" textFill="#ab3363" underline="true">
          <font>
-            <Font name="Arial Rounded MT Bold" size="20.0" />
+            <Font name="Baskerville Old Face" size="25.0" />
          </font>
       </Label>
       <Label layoutX="309.0" layoutY="83.0" text="Password?" textFill="#6b0829">
@@ -114,5 +109,76 @@
             <Font name="OCR A Extended" size="40.0" />
          </font>
       </Label>
+      <ImageView fitHeight="20.0" fitWidth="145.0" layoutX="415.0" layoutY="397.0" opacity="0.4" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../image/divider.gif" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="20.0" fitWidth="145.0" layoutX="285.0" layoutY="397.0" opacity="0.4" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../image/divider.gif" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="20.0" fitWidth="145.0" layoutX="146.0" layoutY="397.0" opacity="0.4" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../image/divider.gif" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="20.0" fitWidth="145.0" layoutX="6.0" layoutY="397.0" opacity="0.4" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../image/divider.gif" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="20.0" fitWidth="145.0" layoutX="490.0" layoutY="323.0" opacity="0.4" pickOnBounds="true" preserveRatio="true" rotate="90.0">
+         <image>
+            <Image url="@../image/divider.gif" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="20.0" fitWidth="145.0" layoutX="490.0" layoutY="200.0" opacity="0.4" pickOnBounds="true" preserveRatio="true" rotate="90.0">
+         <image>
+            <Image url="@../image/divider.gif" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="20.0" fitWidth="145.0" layoutX="490.0" layoutY="72.0" opacity="0.4" pickOnBounds="true" preserveRatio="true" rotate="90.0">
+         <image>
+            <Image url="@../image/divider.gif" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="20.0" fitWidth="145.0" layoutX="416.0" layoutY="-3.0" opacity="0.4" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../image/divider.gif" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="20.0" fitWidth="145.0" layoutX="285.0" layoutY="-3.0" opacity="0.4" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../image/divider.gif" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="20.0" fitWidth="145.0" layoutX="146.0" layoutY="-3.0" opacity="0.4" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../image/divider.gif" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="20.0" fitWidth="145.0" layoutX="6.0" layoutY="-3.0" opacity="0.4" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../image/divider.gif" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="20.0" fitWidth="145.0" layoutX="-64.0" layoutY="64.0" opacity="0.4" pickOnBounds="true" preserveRatio="true" rotate="90.0">
+         <image>
+            <Image url="@../image/divider.gif" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="20.0" fitWidth="145.0" layoutX="-64.0" layoutY="200.0" opacity="0.4" pickOnBounds="true" preserveRatio="true" rotate="90.0">
+         <image>
+            <Image url="@../image/divider.gif" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="20.0" fitWidth="145.0" layoutX="-64.0" layoutY="327.0" opacity="0.4" pickOnBounds="true" preserveRatio="true" rotate="90.0">
+         <image>
+            <Image url="@../image/divider.gif" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
+
