--- a/Updated Version/View/Receipt.fxml
+++ b/Updated Version/View/Receipt.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -7,9 +8,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="620.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ReceiptController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ReceiptController">
    <children>
-      <ImageView fitHeight="697.0" fitWidth="679.0" layoutX="-277.0" layoutY="-59.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="723.0" fitWidth="720.0" layoutX="-314.0" layoutY="-67.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../image/star.gif" />
          </image>
@@ -44,12 +45,12 @@
             <Font name="Monospaced Regular" size="12.0" />
          </font>
       </Text>
-      <Text layoutX="236.0" layoutY="180.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Price">
+      <Text layoutX="227.0" layoutY="180.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Price" wrappingWidth="43.0">
          <font>
             <Font name="Monospaced Regular" size="12.0" />
          </font>
       </Text>
-      <Text layoutX="319.0" layoutY="180.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Amount">
+      <Text layoutX="309.0" layoutY="180.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Amount">
          <font>
             <Font name="Monospaced Regular" size="12.0" />
          </font>
@@ -68,12 +69,12 @@
             <Font name="Monospaced Regular" size="12.0" />
          </font>
       </Label>
-      <Label fx:id="price1" layoutX="236.0" layoutY="207.0" prefHeight="15.0" prefWidth="53.0">
+      <Label fx:id="price1" layoutX="228.0" layoutY="207.0" prefHeight="15.0" prefWidth="53.0">
          <font>
             <Font name="Monospaced Regular" size="12.0" />
          </font>
       </Label>
-      <Label fx:id="amount1" layoutX="319.0" layoutY="207.0" prefHeight="15.0" prefWidth="53.0">
+      <Label fx:id="amount1" layoutX="311.0" layoutY="207.0" prefHeight="15.0" prefWidth="61.0">
          <font>
             <Font name="Monospaced Regular" size="12.0" />
          </font>
@@ -98,22 +99,22 @@
             <Font name="Monospaced Regular" size="12.0" />
          </font>
       </Label>
-      <Label fx:id="price11" layoutX="236.0" layoutY="235.0" prefHeight="15.0" prefWidth="53.0">
+      <Label fx:id="price11" layoutX="228.0" layoutY="235.0" prefHeight="15.0" prefWidth="53.0">
          <font>
             <Font name="Monospaced Regular" size="12.0" />
          </font>
       </Label>
-      <Label fx:id="price111" layoutX="236.0" layoutY="263.0" prefHeight="15.0" prefWidth="53.0">
+      <Label fx:id="price111" layoutX="228.0" layoutY="263.0" prefHeight="15.0" prefWidth="53.0">
          <font>
             <Font name="Monospaced Regular" size="12.0" />
          </font>
       </Label>
-      <Label fx:id="amount2" layoutX="319.0" layoutY="235.0" prefHeight="15.0" prefWidth="53.0">
+      <Label fx:id="amount2" layoutX="310.0" layoutY="235.0" prefHeight="15.0" prefWidth="61.0">
          <font>
             <Font name="Monospaced Regular" size="12.0" />
          </font>
       </Label>
-      <Label fx:id="amount3" layoutX="319.0" layoutY="263.0" prefHeight="15.0" prefWidth="53.0">
+      <Label fx:id="amount3" layoutX="311.0" layoutY="263.0" prefHeight="15.0" prefWidth="61.0">
          <font>
             <Font name="Monospaced Regular" size="12.0" />
          </font>
@@ -148,32 +149,32 @@
             <Font name="Monospaced Regular" size="12.0" />
          </font>
       </Label>
-      <Label fx:id="price2" layoutX="236.0" layoutY="290.0" prefHeight="15.0" prefWidth="53.0">
+      <Label fx:id="price2" layoutX="228.0" layoutY="290.0" prefHeight="15.0" prefWidth="53.0">
          <font>
             <Font name="Monospaced Regular" size="12.0" />
          </font>
       </Label>
-      <Label fx:id="price22" layoutX="236.0" layoutY="316.0" prefHeight="15.0" prefWidth="53.0">
+      <Label fx:id="price22" layoutX="228.0" layoutY="316.0" prefHeight="15.0" prefWidth="53.0">
          <font>
             <Font name="Monospaced Regular" size="12.0" />
          </font>
       </Label>
-      <Label fx:id="price222" layoutX="236.0" layoutY="341.0" prefHeight="15.0" prefWidth="53.0">
+      <Label fx:id="price222" layoutX="228.0" layoutY="341.0" prefHeight="15.0" prefWidth="53.0">
          <font>
             <Font name="Monospaced Regular" size="12.0" />
          </font>
       </Label>
-      <Label fx:id="amount4" layoutX="319.0" layoutY="290.0" prefHeight="15.0" prefWidth="53.0">
+      <Label fx:id="amount4" layoutX="311.0" layoutY="290.0" prefHeight="15.0" prefWidth="61.0">
          <font>
             <Font name="Monospaced Regular" size="12.0" />
          </font>
       </Label>
-      <Label fx:id="amount6" layoutX="319.0" layoutY="341.0" prefHeight="15.0" prefWidth="53.0">
+      <Label fx:id="amount6" layoutX="311.0" layoutY="341.0" prefHeight="15.0" prefWidth="61.0">
          <font>
             <Font name="Monospaced Regular" size="12.0" />
          </font>
       </Label>
-      <Label fx:id="amount5" layoutX="319.0" layoutY="316.0" prefHeight="15.0" prefWidth="53.0">
+      <Label fx:id="amount5" layoutX="311.0" layoutY="316.0" prefHeight="15.0" prefWidth="61.0">
          <font>
             <Font name="Monospaced Regular" size="12.0" />
          </font>
@@ -183,27 +184,22 @@
             <Font name="Monospaced Regular" size="12.0" />
          </font>
       </Text>
-      <Text layoutX="34.0" layoutY="396.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Total to pay:">
+      <Text layoutX="28.0" layoutY="389.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Total to pay:">
          <font>
             <Font name="Monospaced Regular" size="12.0" />
          </font>
       </Text>
-      <Label fx:id="total" layoutX="301.0" layoutY="385.0" prefHeight="15.0" prefWidth="61.0">
+      <Label fx:id="total" layoutX="310.0" layoutY="379.0" prefHeight="15.0" prefWidth="61.0">
          <font>
             <Font name="Monospaced Regular" size="12.0" />
          </font>
       </Label>
-      <Text layoutX="32.0" layoutY="410.0" strokeType="OUTSIDE" strokeWidth="0.0" text="----------------------------------------------">
+      <Text layoutX="32.0" layoutY="404.0" strokeType="OUTSIDE" strokeWidth="0.0" text="----------------------------------------------">
          <font>
             <Font name="Monospaced Regular" size="12.0" />
          </font>
       </Text>
-      <Text layoutX="120.0" layoutY="490.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Store closes at 9 pm ">
-         <font>
-            <Font name="Monospaced Regular" size="12.0" />
-         </font>
-      </Text>
-      <Text layoutX="55.0" layoutY="504.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Thank you for visiting Kuromi's Coffee Shop !">
+      <Text layoutX="45.0" layoutY="492.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Thank you for visiting Kuromi's Coffee Shop !">
          <font>
             <Font name="Monospaced Regular" size="12.0" />
          </font>
@@ -233,15 +229,25 @@
             <Font name="Monospaced Regular" size="12.0" />
          </font>
       </Text>
-      <ImageView fitHeight="120.0" fitWidth="173.0" layoutX="114.0" layoutY="508.0">
+      <ImageView accessibleRole="BUTTON" fitHeight="140.0" fitWidth="186.0" layoutX="188.0" layoutY="506.0">
          <image>
             <Image url="@../image/anya5.gif" />
          </image>
       </ImageView>
-      <Text layoutX="115.0" layoutY="518.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Please do come again :)">
+      <Text layoutX="115.0" layoutY="509.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Please do come again :)">
          <font>
             <Font name="Monospaced Regular" size="12.0" />
          </font>
       </Text>
+      <ImageView fitHeight="97.0" fitWidth="173.0" layoutX="41.0" layoutY="527.0" rotate="-149.0">
+         <image>
+            <Image url="@../image/bubble.gif" />
+         </image>
+      </ImageView>
+      <Button fx:id="clickMe" layoutX="51.0" layoutY="564.0" mnemonicParsing="false" onAction="#proceed" rotate="31.0" style="-fx-background-color: transparent;" text="Click Here !" textFill="#ab3363">
+         <font>
+            <Font name="Monospaced Bold" size="18.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
