--- a/Updated Version/View/Satisfaction.fxml
+++ b/Updated Version/View/Satisfaction.fxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -19,27 +19,27 @@
             <Image url="@../image/logo.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="109.0" fitWidth="126.0" layoutX="44.0" layoutY="311.0" onMouseMoved="#point" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="109.0" fitWidth="126.0" layoutX="45.0" layoutY="302.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../image/love.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="128.0" fitWidth="143.0" layoutX="225.0" layoutY="298.0" onMouseMoved="#point2" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="128.0" fitWidth="143.0" layoutX="239.0" layoutY="293.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../image/broken-heart.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="image3" fitHeight="117.0" fitWidth="102.0" layoutX="149.0" layoutY="444.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="image3" fitHeight="117.0" fitWidth="102.0" layoutX="153.0" layoutY="444.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../image/anya9.gif" />
          </image>
       </ImageView>
-      <ImageView fx:id="image1" fitHeight="117.0" fitWidth="102.0" layoutX="149.0" layoutY="444.0" pickOnBounds="true" preserveRatio="true" visible="false">
+      <ImageView fx:id="image1" fitHeight="117.0" fitWidth="102.0" layoutX="153.0" layoutY="444.0" pickOnBounds="true" preserveRatio="true" visible="false">
          <image>
             <Image url="@../image/anya7.gif" />
          </image>
       </ImageView>
-      <ImageView fx:id="image2" fitHeight="117.0" fitWidth="102.0" layoutX="149.0" layoutY="444.0" pickOnBounds="true" preserveRatio="true" visible="false">
+      <ImageView fx:id="image2" fitHeight="117.0" fitWidth="102.0" layoutX="153.0" layoutY="444.0" pickOnBounds="true" preserveRatio="true" visible="false">
          <image>
             <Image url="@../image/anya8.gif" />
          </image>
@@ -64,17 +64,7 @@
             <Font name="Monospaced Regular" size="15.0" />
          </font>
       </Text>
-      <Text layoutX="39.0" layoutY="173.0" strokeType="OUTSIDE" strokeWidth="0.0" text="----------------------------------------------">
-         <font>
-            <Font name="Monospaced Regular" size="12.0" />
-         </font>
-      </Text>
-      <Text layoutX="34.0" layoutY="557.0" strokeType="OUTSIDE" strokeWidth="0.0" text="----------------------------------------------" wrappingWidth="331.25390625">
-         <font>
-            <Font name="Monospaced Regular" size="12.0" />
-         </font>
-      </Text>
-      <Text layoutX="30.0" layoutY="577.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Thank you again for visiting">
+      <Text layoutX="32.0" layoutY="583.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Thank you again for visiting">
          <font>
             <Font name="Monospaced Regular" size="20.0" />
          </font>
@@ -84,12 +74,12 @@
             <Font name="Monospaced Regular" size="15.0" />
          </font>
       </Text>
-      <Text layoutX="72.0" layoutY="600.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Kuromi's Coffee Shop !">
+      <Text layoutX="72.0" layoutY="607.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Kuromi's Coffee Shop !">
          <font>
             <Font name="Monospaced Regular" size="20.0" />
          </font>
       </Text>
-      <Text layoutX="29.0" layoutY="207.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Hello valued customer !">
+      <Text layoutX="32.0" layoutY="208.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Hello valued customer !">
          <font>
             <Font name="Monospaced Regular" size="15.0" />
          </font>
@@ -104,16 +94,51 @@
             <Font name="Monospaced Regular" size="15.0" />
          </font>
       </Text>
-      <RadioButton fx:id="r1" layoutX="63.0" layoutY="418.0" mnemonicParsing="false" onAction="#pick" text="Satisfied">
+      <ImageView fitHeight="14.0" fitWidth="117.0" layoutX="26.0" layoutY="156.0">
+         <image>
+            <Image url="@../image/divider.gif" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="14.0" fitWidth="117.0" layoutX="147.0" layoutY="156.0">
+         <image>
+            <Image url="@../image/divider.gif" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="14.0" fitWidth="117.0" layoutX="264.0" layoutY="156.0">
+         <image>
+            <Image url="@../image/divider.gif" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="14.0" fitWidth="117.0" layoutX="26.0" layoutY="546.0">
+         <image>
+            <Image url="@../image/divider.gif" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="14.0" fitWidth="117.0" layoutX="140.0" layoutY="546.0">
+         <image>
+            <Image url="@../image/divider.gif" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="14.0" fitWidth="117.0" layoutX="257.0" layoutY="546.0">
+         <image>
+            <Image url="@../image/divider.gif" />
+         </image>
+      </ImageView>
+      <Button fx:id="b1" layoutX="58.0" layoutY="310.0" mnemonicParsing="false" prefHeight="88.0" prefWidth="84.0" style="-fx-background-color: transparent;">
          <font>
-            <Font size="13.0" />
+            <Font name="Monospaced Regular" size="12.0" />
          </font>
-      </RadioButton>
-      <RadioButton fx:id="r2" layoutX="245.0" layoutY="418.0" mnemonicParsing="false" onAction="#pick2" text="Unsatisfied">
+      </Button>
+      <Button fx:id="b2" layoutX="252.0" layoutY="310.0" mnemonicParsing="false" prefHeight="88.0" prefWidth="102.0" style="-fx-background-color: tranparent;" />
+      <Text fill="#ab3363" layoutX="59.0" layoutY="426.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Satisfied">
          <font>
-            <Font size="13.0" />
+            <Font name="Monospaced Bold" size="15.0" />
          </font>
-      </RadioButton>
+      </Text>
+      <Text fill="#ab3363" layoutX="253.0" layoutY="426.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Unsatisfied">
+         <font>
+            <Font name="Monospaced Bold" size="15.0" />
+         </font>
+      </Text>
    </children>
 </AnchorPane>
-
