--- a/Updated Version/View/Checkout.fxml
+++ b/Updated Version/View/Checkout.fxml
@@ -12,6 +12,7 @@
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="796.0" prefWidth="1244.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CheckoutController">
    <children>
@@ -125,6 +126,11 @@
                   <Image url="@../image/melody.gif" />
                </image>
             </ImageView>
+            <Text layoutX="211.0" layoutY="121.0" strokeType="OUTSIDE" strokeWidth="0.0" text="¥">
+               <font>
+                  <Font name="Broadway" size="18.0" />
+               </font>
+            </Text>
          </children>
       </Pane>
       <VBox fx:id="myvbox1" layoutX="17.0" layoutY="19.0" prefHeight="759.0" prefWidth="391.0" spacing="6.0">
@@ -136,7 +142,7 @@
                         <Image url="@../image/hotchoco.jpg" />
                      </image>
                   </ImageView>
-                  <Label fx:id="price1" layoutX="201.0" layoutY="45.0" prefHeight="21.0" prefWidth="53.0" text="5.00" textFill="#4a4141">
+                  <Label fx:id="price1" layoutX="223.0" layoutY="44.0" prefHeight="21.0" prefWidth="53.0" text="5.00" textFill="#4a4141">
                      <font>
                         <Font name="Broadway" size="18.0" />
                      </font>
@@ -151,6 +157,11 @@
                   <Line endX="387.0" endY="-61.0" layoutX="4.0" layoutY="261.0" startX="-4.0" startY="-61.0" stroke="#ff82f3" strokeWidth="10.0" />
                   <Line endX="413.0" endY="115.0" layoutX="-22.0" layoutY="85.0" startX="413.0" startY="-85.0" stroke="#b382ff" strokeWidth="10.0" />
                   <Line endX="377.0" endY="-61.0" layoutX="14.0" layoutY="61.0" startX="-14.0" startY="-61.0" stroke="#ff82f3" strokeWidth="10.0" />
+                  <Text layoutX="201.0" layoutY="61.0" strokeType="OUTSIDE" strokeWidth="0.0" text="¥">
+                     <font>
+                        <Font name="Broadway" size="18.0" />
+                     </font>
+                  </Text>
                </children>
                <VBox.margin>
                   <Insets bottom="20.0" top="20.0" />
@@ -158,7 +169,7 @@
             </Pane>
             <Pane fx:id="pane2" prefHeight="200.0" prefWidth="550.0" style="-fx-background-color: trasparent; -fx-border-width: 4;">
                <children>
-                  <Label fx:id="price11" layoutX="204.0" layoutY="43.0" prefHeight="21.0" prefWidth="70.0" text="10.00" textFill="#4a4141">
+                  <Label fx:id="price11" layoutX="224.0" layoutY="43.0" prefHeight="21.0" prefWidth="70.0" text="10.00" textFill="#4a4141">
                      <font>
                         <Font name="Broadway" size="18.0" />
                      </font>
@@ -178,6 +189,11 @@
                   <Line endX="-13.0" endY="125.0" layoutX="13.0" layoutY="73.0" startX="-13.0" startY="-73.0" stroke="#ff82f3" strokeWidth="10.0" />
                   <Line endX="402.0" endY="-33.0" layoutX="-11.0" layoutY="33.0" startX="11.0" startY="-33.0" stroke="#b382ff" strokeWidth="10.0" />
                   <Line endX="398.0" endY="-20.0" layoutX="-7.0" layoutY="220.0" startX="7.0" startY="-20.0" stroke="#b382ff" strokeWidth="10.0" />
+                  <Text layoutX="204.0" layoutY="60.0" strokeType="OUTSIDE" strokeWidth="0.0" text="¥">
+                     <font>
+                        <Font name="Broadway" size="18.0" />
+                     </font>
+                  </Text>
                </children>
                <VBox.margin>
                   <Insets bottom="20.0" top="20.0" />
@@ -185,7 +201,7 @@
             </Pane>
             <Pane fx:id="pane3" prefHeight="200.0" prefWidth="550.0" style="-fx-background-color: trasparent; -fx-border-width: 4;">
                <children>
-                  <Label fx:id="price111" layoutX="211.0" layoutY="38.0" prefHeight="21.0" prefWidth="70.0" text="5.00" textFill="#4a4141">
+                  <Label fx:id="price111" layoutX="230.0" layoutY="37.0" prefHeight="21.0" prefWidth="70.0" text="5.00" textFill="#4a4141">
                      <font>
                         <Font name="Broadway" size="18.0" />
                      </font>
@@ -205,6 +221,11 @@
                   <Line endX="439.0" endY="76.0" layoutX="-48.0" layoutY="124.0" startX="439.0" startY="-124.0" stroke="#b382ff" strokeWidth="10.0" />
                   <Line endX="87.0" endY="86.0" layoutX="304.0" layoutY="114.0" startX="-295.9289245605469" startY="86.0" stroke="#ff82f3" strokeWidth="10.0" />
                   <Line endX="35.0" endY="39.0" layoutX="-35.0" layoutY="161.0" startX="35.0" startY="-161.0" stroke="#b382ff" strokeWidth="10.0" />
+                  <Text layoutX="211.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" text="¥">
+                     <font>
+                        <Font name="Broadway" size="18.0" />
+                     </font>
+                  </Text>
                </children>
                <VBox.margin>
                   <Insets bottom="20.0" top="20.0" />
@@ -216,7 +237,7 @@
          <children>
             <Pane fx:id="pane4" prefHeight="200.0" prefWidth="367.0" style="-fx-background-color: trasparent; -fx-border-width: 4;">
                <children>
-                  <Label fx:id="price2" layoutX="201.0" layoutY="42.0" prefHeight="21.0" prefWidth="54.0" text="5.00" textFill="#4a4141">
+                  <Label fx:id="price2" layoutX="222.0" layoutY="41.0" prefHeight="21.0" prefWidth="54.0" text="5.00" textFill="#4a4141">
                      <font>
                         <Font name="Broadway" size="18.0" />
                      </font>
@@ -236,6 +257,11 @@
                   <Line endX="282.0" endY="-51.0" layoutX="109.0" layoutY="51.0" startX="-109.0" startY="-51.0" stroke="#b382ff" strokeWidth="10.0" />
                   <Line endX="-18.0" endY="104.0" layoutX="18.0" layoutY="91.0" startX="-18.0" startY="-91.0" stroke="#ff82f3" strokeWidth="10.0" />
                   <Line endX="408.0" endY="-20.0" layoutX="-17.0" layoutY="220.0" startX="17.0" startY="-20.0" stroke="#b382ff" strokeWidth="10.0" />
+                  <Text layoutX="201.0" layoutY="58.0" strokeType="OUTSIDE" strokeWidth="0.0" text="¥">
+                     <font>
+                        <Font name="Broadway" size="18.0" />
+                     </font>
+                  </Text>
                </children>
                <VBox.margin>
                   <Insets bottom="20.0" top="20.0" />
@@ -243,7 +269,7 @@
             </Pane>
             <Pane fx:id="pane5" prefHeight="200.0" prefWidth="550.0" style="-fx-background-color: trasparent; -fx-border-width: 4;">
                <children>
-                  <Label fx:id="price22" layoutX="199.0" layoutY="47.0" prefHeight="21.0" prefWidth="62.0" text="10.00" textFill="#4a4141">
+                  <Label fx:id="price22" layoutX="219.0" layoutY="48.0" prefHeight="21.0" prefWidth="62.0" text="10.00" textFill="#4a4141">
                      <font>
                         <Font name="Broadway" size="18.0" />
                      </font>
@@ -263,6 +289,11 @@
                   <Line endX="212.0" endY="-20.0" layoutX="179.0" layoutY="20.0" startX="-172.0" startY="-20.0" stroke="#ff82f3" strokeWidth="10.0" />
                   <Line endX="-67.0" endY="104.0" layoutX="69.0" layoutY="91.0" startX="-67.0" startY="-91.0" stroke="#b382ff" strokeWidth="10.0" />
                   <Line endX="387.0" endY="-61.0" layoutX="4.0" layoutY="261.0" startX="-2.0" startY="-61.0" stroke="#ff82f3" strokeWidth="10.0" />
+                  <Text layoutX="199.0" layoutY="65.0" strokeType="OUTSIDE" strokeWidth="0.0" text="¥">
+                     <font>
+                        <Font name="Broadway" size="18.0" />
+                     </font>
+                  </Text>
                </children>
                <VBox.margin>
                   <Insets bottom="20.0" top="20.0" />
@@ -270,7 +301,7 @@
             </Pane>
             <Pane fx:id="pane6" prefHeight="200.0" prefWidth="550.0" style="-fx-background-color: trasparent; -fx-border-width: 4;">
                <children>
-                  <Label fx:id="price222" layoutX="200.0" layoutY="38.0" prefHeight="21.0" prefWidth="62.0" text="5.00" textFill="#4a4141">
+                  <Label fx:id="price222" layoutX="222.0" layoutY="39.0" prefHeight="21.0" prefWidth="62.0" text="5.00" textFill="#4a4141">
                      <font>
                         <Font name="Broadway" size="18.0" />
                      </font>
@@ -290,6 +321,11 @@
                   <Line endX="-19.0" endY="119.0" layoutX="410.0" layoutY="79.0" startX="-19.0" startY="-74.0" stroke="#ff82f3" strokeWidth="10.0" />
                   <Line endX="320.0" endY="-18.0" layoutX="71.0" layoutY="18.0" startX="-71.0" startY="-18.0" stroke="#b382ff" strokeWidth="10.0" />
                   <Line endX="399.0" endY="-20.0" layoutX="-8.0" layoutY="220.0" startX="17.0" startY="-20.0" stroke="#b382ff" strokeWidth="10.0" />
+                  <Text layoutX="200.0" layoutY="56.0" strokeType="OUTSIDE" strokeWidth="0.0" text="¥">
+                     <font>
+                        <Font name="Broadway" size="18.0" />
+                     </font>
+                  </Text>
                </children>
                <VBox.margin>
                   <Insets bottom="20.0" top="20.0" />
